Updates from Overleaf

--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -69,6 +69,15 @@ The integral constraint is another systematic effect which is induced since the 
 \end{equation}
 where $\tilde{C}^{\rm window}$ is the survey mask power spectrum, i.e., the spherical harmonic transform of $\hat{\omega}^{\rm window}$.
 
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/mask_2pf.pdf}
+    \caption{\mr{The survey mask correlation functions for the imaging regions forming the DESI footprint. The inset shows the correlations specifically for separations between $100$ and $180$ degrees.}}
+    \label{fig:mask2pf}
+\end{figure}
+
+
+
 The lognormal simulations are used to validate our survey window and integral constraint correction. Figure \ref{fig:model_mock} shows the mean power spectrum of the $\fnl=0$ simulations (dashed) and the best-fitting theory prediction before and after accounting for the survey mask and integral constraint. The simulations are neither contaminated nor mitigated. The light and dark shades represent the 68\% estimated error on the mean and one single realization, respectively. The DESI mask, which covers around $40\%$ of the sky, is applied to the simulations. We find that the survey window effect modulates the clustering power on $\ell < 200$ and the integral constraint alters the clustering power on $\ell < 6$.
 
 \subsection{Parameter estimation}
